r123 (28. 01. 2023):
Attempt to fix random crashes in XP Tracker

r122 (21. 01. 2023):
Added option "Show Enemy Turret Trackers"
XP Tracker: Fixed a rare crash when game returned nil value for accumulated stealth bonus

r121 (13. 01. 2023):
Enemy Counter: Fixed double value
Enemy Counter: Fixed an issue where dominated guard with pager does not count down pager counter

r120 (12. 01. 2023):
"A Criminal Carol" event ended
Assault Delay Tracker: Fixed a crash with mods that change hostage delay
Enemy Counter: Fixed an issue where counter is negative

r119 (09. 01. 2023):
Assault Delay Tracker: Fixed a crash when alarm went off
Enemy Count Tracker: Fixed a visual issue where 2 icons overlap each other

r118 (08. 01. 2023):
Menu: Fixed a visibility issue with options having multiple parents
Minion Tracker: Tracker will use less space on the screen
Slaughterhouse: Fixed a visual issue in achievement tracker "Not hard enough"

r117 (05. 01. 2023):
Shadow Raid: Fixed a crash at sync

r116 (03. 01. 2023):
Enemy Counter: Fixed a crash when option "Show enemies with pager (stealth)" is enabled

r115 (02. 01. 2023):
Added option "Show enemies with pager (stealth)"
Inventory: Fixed missing strings in Sicario
Inventory: Fixed percent issue in Leech

r114 (01. 01. 2023):
Inventory: Fixed crashes related to Stoic and Leech

r113 (31. 12. 2022):
Fixed a possible crash in menu

r112 (30. 12. 2022):
Added "Show Detailed Inventory Description" option

r111 (27. 12. 2022):
Added Copycat buffs

r110 (17. 12. 2022):
Added option "Bloodthirst Ratio"

r109 (15. 12. 2022):
Updated code to properly support "A Criminal Carol" event
Implemented a new achievement hooking format which will improve memory efficiency and improve framerate
Assault Delay Tracker: Improved accuracy if playing with difficulty overhaul mods, for example "Crackdown"

r108 (12. 12. 2022):
Meltdown: Fixed a crash related to waypoints

r107 (08. 12. 2022):