@@ -4,6 +4,8 @@
         <!-- Main code -->
         <pre hook_id="core/lib/utils/coreapp" :script_path="core.lua"/>
 
+        <post hook_id="core/lib/managers/coreworldinstancemanager" :script_path="CoreWorldInstanceManager.lua"/>
+
         <group hook_id="lib/managers/">
             <post :hook_id="criminalsmanager" :script_path="CriminalsManager.lua" />
             <post :hook_id="group_ai_states/groupaistatebase" :script_path="GroupAIStateBase.lua" />
@@ -46,13 +48,10 @@
             <post :hook_id="menu/blackmarketgui" :script_path="BlackMarketGui.lua" />
             <post :hook_id="menu/menunodegui" :script_path="MenuNodeMainGui.lua" />
 
-            <post :hook_id="mutatorsmanager" :script_path="MutatorsManager.lua" />
             <post :hook_id="playermanager" :script_path="PlayerManager.lua" />
             <post :hook_id="preplanningmanager" :script_path = "PrePlanningManager.lua" />
             <post :hook_id="trademanager" :script_path="TradeManager.lua" />
         </group>
-
-        <post hook_id="core/lib/managers/coreworldinstancemanager" :script_path="CoreWorldInstanceManager.lua"/>
 
         <post hook_id="lib/mutators/mutatorcg22" :script_path="MutatorCG22.lua" />
         <post hook_id="lib/mutators/mutatorpiggybank" :script_path="MutatorPiggyBank.lua" />
