@@ -16,9 +16,6 @@ function Setup:init_managers(managers, ...)
     managers.ehi_waypoint = EHIWaypointManager:new()
     managers.ehi_buff = EHIBuffManager:new()
     EHI:CallCallback(EHI.CallbackMessage.InitManagers)
-    if managers.player.SetPlayerData then
-        managers.player:SetPlayerData()
-    end
 end
 
 function Setup:init_finalize(...)
